
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int time_t ;
typedef int them ;
struct timeval {int tv_usec; scalar_t__ tv_sec; } ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int prebuf ;
typedef int op ;
typedef int me ;


 int AF_INET ;
 scalar_t__ EAGAIN ;
 scalar_t__ EINPROGRESS ;
 scalar_t__ ENOBUFS ;
 scalar_t__ EWOULDBLOCK ;
 int F_GETFL ;
 int F_SETFL ;
 int IPPROTO_TCP ;
 int NEW_MSS ;
 int O_NONBLOCK ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 scalar_t__ TCP_MAXSEG ;
 int TCP_NODELAY ;
 int atoi (char*) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int err (int,char*) ;
 scalar_t__ errno ;
 int fcntl (int,int ,int) ;
 scalar_t__ getsockname (int,struct sockaddr*,int*) ;
 int getsockopt (int,int ,scalar_t__,char*,int*) ;
 int icmp_unreach (struct sockaddr_in*,struct sockaddr_in*) ;
 int inet_addr (char*) ;
 int memset (char*,int ,int) ;
 int ntohs (int ) ;
 int primedefaultmss (int,int) ;
 int printf (char*,int) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;
 int time (int *) ;
 int warn (char*) ;

int
main(int argc, char *argv[])
{
 struct sockaddr_in me, them;
 int fd, op, olen, mss;
 char prebuf[16374];
 time_t now1, now2;
 struct timeval tv;

 mss = NEW_MSS;

 primedefaultmss(-1, mss);

 fd = socket(AF_INET, SOCK_STREAM, 0);
 if (fd == -1)
  err(1, "socket");

 memset((char *)&them, 0, sizeof(me));
 them.sin_family = AF_INET;
 them.sin_port = ntohs(atoi(argv[2]));
 them.sin_addr.s_addr = inet_addr(argv[1]);

 primedefaultmss(fd, mss);

 op = fcntl(fd, F_GETFL, 0);
 if (op != -1) {
  op |= O_NONBLOCK;
  fcntl(fd, F_SETFL, op);
 }

 op = 1;
 (void) setsockopt(fd, SOL_SOCKET, TCP_NODELAY, &op, sizeof(op));

 if (connect(fd, (struct sockaddr *)&them, sizeof(them)) &&
     (errno != EINPROGRESS))
  err(1, "connect");

 olen = sizeof(op);
 if (!getsockopt(fd, IPPROTO_TCP, TCP_MAXSEG, (char *)&op, &olen))
  printf("Remote mss %d\n", op);
 else
  err(1, "getsockopt");
 olen = sizeof(me);
 if (getsockname(fd, (struct sockaddr *)&me, &olen))
  err(1, "getsockname");

 (void) read(fd, prebuf, sizeof(prebuf));

 now1 = time(((void*)0));
 for (op = 2; op; op--) {
  icmp_unreach(&me, &them);
  olen = read(fd, prebuf, sizeof(prebuf));
  if (olen == -1) {
   if (errno == ENOBUFS || errno == EAGAIN ||
       errno == EWOULDBLOCK) {
    tv.tv_sec = 0;
    tv.tv_usec = 10000;
    select(3, ((void*)0), ((void*)0), ((void*)0), &tv);
    continue;
   }
   warn("read");
   break;
  }
 }
 now2 = time(((void*)0));
 printf("Elapsed time %d\n", now2 - now1);

 primedefaultmss(fd, 0);
 close(fd);
 return 0;
}
